# MetodikAPI

./: .env  .gitignore  Readme.md  package-lock.json  pyproject.toml  run.py
app/: .env  __init__.py  config.py
app/messagingServices/: sql.sql  whatsappAPI.py  whatsappSP.py
app/procedures/Configuracion/: modulos_procedures.py
app/procedures/Exploradores/: paqueteriaEntrega_procedures.py  paqueteriaRExplorador_procedures.py  rutasExplorador_procedures.py
app/procedures/Filtros/: filtros_procedures.py
app/procedures/indicadores/: indicadores_procedures.py
app/procedures/login/: login_procedures.py
app/routes/: __init_.py
app/routes/Catalogos/: Agentes.py  Almacenes.py  Choferes.py  Clientes.py  Destinos.py  Empresas.py  Equipos.py  Pasajeros.py  Perfiles.py  Rutas.py  Sucursales.py  Usuarios.py  Vehiculos.py
app/routes/Configuracion/: Modulos.py
app/routes/Exploradores/: PaqueteriaEntrega.py  PaqueteriaRExplorador.py  RutasExplorador.py
app/routes/Filtros/: Filtros.py
app/routes/Indicadores/: indicadores.py
app/routes/Whatsapp/: whatsapp.py
app/routes/login/: login.py
app/services/Configuracion/: modulos_service.py
app/services/Exploradores/: paqueteriaEntrega_service.py  paqueteriaRExplorador_service.py  rutasExplorador_service.py
app/services/Filtros/: filtros_service.py
app/services/Indicadores/: indicadores_service.py
app/services/login/: login_service.py
app/services/whatsappAPI/: whatsapp_services.py
app/static/: login.json  swagger.json
app/utils/: config.py  db.py  db_helpers.py  validators.py
(+44 files in other folders)
