[tool.poetry]
name = "metodikapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bidict = "0.23.1"
blinker = "1.8.2"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
flask = "3.0.3"
flask-cors = "5.0.0"
flask-jwt-extended = "4.6.0"
flask-socketio = "5.4.1"
flask-swagger-ui = "4.11.1"
h11 = "0.14.0"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
pyjwt = "2.9.0"
pyodbc = "5.1.0"
python-dotenv = "1.0.1"
python-engineio = "4.10.1"
python-socketio = "5.11.4"
requests = "2.32.3"
simple-websocket = "1.1.0"
sqlalchemy = "2.0.35"
typing-extensions = "4.12.2"
werkzeug = "3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
